refactro add remove impl